--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,10 @@ StyleCopReport.xml
 *.pidb
 *.svclog
 *.scc
+*.AssemblyInfo.cs
+*.AssemblyInfoInputs.cache
+*AssemblyInfo.cs
+*AssemblyInfoInputs.cache
 
 # Chutzpah Test files
 _Chutzpah*
