--- a/.gitignore
+++ b/.gitignore
@@ -105,8 +105,8 @@ StyleCopReport.xml
 *.scc
 *.AssemblyInfo.cs
 *.AssemblyInfoInputs.cache
-*AssemblyInfo.cs
-*AssemblyInfoInputs.cache
+*.AssemblyInfo.cs
+*.AssemblyInfoInputs.cache
 
 # Chutzpah Test files
 _Chutzpah*
